<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewAppointment">

    <TextView
        android:id="@+id/BoxView1"
        android:layout_width="380dp"
        android:layout_height="700dp"
        android:background="@drawable/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BACK"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <TextView
        android:id="@+id/BoxView2"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ADD_REVIEW"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView5"
        app:layout_constraintEnd_toEndOf="@+id/BoxView5"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="@+id/BoxView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
        app:layout_constraintVertical_bias="0.409" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DELETE_BOOKING"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView6"
        app:layout_constraintEnd_toEndOf="@+id/BoxView6"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="@+id/BoxView6"
        app:layout_constraintTop_toTopOf="@+id/BoxView6"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="228dp"
        android:layout_height="52dp"
        android:ems="20"
        android:inputType="textPersonName"
        android:text="@string/MY_APPOINTMENT"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/BoxView5"
        android:layout_width="342dp"
        android:layout_height="217dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toTopOf="@+id/BoxView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

    <TextView
        android:id="@+id/BoxView6"
        android:layout_width="342dp"
        android:layout_height="217dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="173dp"
        android:layout_height="19dp"
        android:fontFamily="sans-serif-black"
        android:text="DR.PASAN PERERA"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView5"
        app:layout_constraintEnd_toEndOf="@+id/BoxView5"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="@+id/BoxView5"
        app:layout_constraintTop_toTopOf="@+id/BoxView5"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="173dp"
        android:layout_height="19dp"
        android:fontFamily="sans-serif-black"
        android:text="DR.PASAN PERERA"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView6"
        app:layout_constraintEnd_toEndOf="@+id/BoxView6"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="@+id/BoxView6"
        app:layout_constraintTop_toTopOf="@+id/BoxView6"
        app:layout_constraintVertical_bias="0.111" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="date"
        android:text="2022.10.10"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView5"
        app:layout_constraintEnd_toEndOf="@+id/BoxView5"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="@+id/BoxView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/editTextDate4"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="date"
        android:text="2022.10.10"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView6"
        app:layout_constraintEnd_toEndOf="@+id/BoxView6"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="@+id/BoxView6"
        app:layout_constraintTop_toTopOf="@+id/BoxView6"
        app:layout_constraintVertical_bias="0.331" />

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="time"
        android:text="8:00AM-9:00AM"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView5"
        app:layout_constraintEnd_toEndOf="@+id/BoxView5"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/editTextDate2"
        app:layout_constraintTop_toTopOf="@+id/BoxView5"
        app:layout_constraintVertical_bias="0.278" />

    <EditText
        android:id="@+id/editTextTime3"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="time"
        android:text="8:00AM-9:00AM"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView6"
        app:layout_constraintEnd_toEndOf="@+id/BoxView6"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="@+id/BoxView6"
        app:layout_constraintTop_toTopOf="@+id/BoxView6"
        app:layout_constraintVertical_bias="0.331" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="Ward - Cardiology Unit"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView5"
        app:layout_constraintEnd_toEndOf="@+id/BoxView5"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="@+id/BoxView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/editTextTextPostalAddress1"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="Ward - Cardiology Unit"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView6"
        app:layout_constraintEnd_toEndOf="@+id/BoxView6"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="@+id/BoxView6"
        app:layout_constraintTop_toTopOf="@+id/BoxView6"
        app:layout_constraintVertical_bias="0.668" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="108dp"
        android:layout_height="29dp"
        android:text="Completed"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView5"
        app:layout_constraintEnd_toEndOf="@+id/BoxView5"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/BoxView5"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="108dp"
        android:layout_height="29dp"
        android:text="Pending"
        android:textColor="#E91E63"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView6"
        app:layout_constraintEnd_toEndOf="@+id/BoxView6"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPostalAddress1"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime3"
        app:layout_constraintVertical_bias="0.238" />


</androidx.constraintlayout.widget.ConstraintLayout>