<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/BoxView1"
        android:layout_width="420dp"
        android:layout_height="800dp"
        android:background="@drawable/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/EDIT_VALUE"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="166dp"
        android:layout_height="160dp"
        android:src="@drawable/image"
        app:civ_border_color="#ffff"
        app:civ_border_width="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="28dp"
        android:text="@string/DELETE_BUTTON"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BoxView12"
        app:layout_constraintVertical_bias="0.358" />

    <TextView
        android:id="@+id/BoxView2"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/BoxView4"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441" />

    <TextView
        android:id="@+id/BoxView11"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <TextView
        android:id="@+id/BoxView10"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <TextView
        android:id="@+id/BoxView9"
        android:layout_width="200dp"
        android:layout_height="76dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <TextView
        android:id="@+id/BoxView8"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441" />

    <TextView
        android:id="@+id/BoxView7"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/BoxView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <TextView
        android:id="@+id/BoxView3"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <TextView
        android:id="@+id/BoxView12"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <TextView
        android:id="@+id/BoxView5"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <TextView
        android:id="@+id/BoxView6"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/box2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:ems="20"
        android:inputType="textPersonName"
        android:text="@string/MY_PROFILE"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/BoxView2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/BoxView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="200dp"
        android:layout_height="43dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Malini Jayaweera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/BoxView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="O Positive"
        app:layout_constraintBottom_toTopOf="@+id/BoxView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BoxView9"
        app:layout_constraintVertical_bias="0.38" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Female"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BoxView11"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NAME"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView3"
        app:layout_constraintEnd_toEndOf="@+id/BoxView3"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="@+id/BoxView3"
        app:layout_constraintTop_toTopOf="@+id/BoxView3"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DATE OF BIRTH"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView4"
        app:layout_constraintEnd_toEndOf="@+id/BoxView4"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="@+id/BoxView4"
        app:layout_constraintTop_toTopOf="@+id/BoxView4"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADDRESS"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView5"
        app:layout_constraintEnd_toEndOf="@+id/BoxView5"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="@+id/BoxView5"
        app:layout_constraintTop_toTopOf="@+id/BoxView5"
        app:layout_constraintVertical_bias="0.619" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BLOOD TYPE"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView6"
        app:layout_constraintEnd_toEndOf="@+id/BoxView6"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="@+id/BoxView6"
        app:layout_constraintTop_toTopOf="@+id/BoxView6"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GENDER"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView12"
        app:layout_constraintEnd_toEndOf="@+id/BoxView12"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="@+id/BoxView12"
        app:layout_constraintTop_toTopOf="@+id/BoxView12"
        app:layout_constraintVertical_bias="0.571" />

    <EditText
        android:id="@+id/editTextTextPersonName12"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="635/5, Wilahena Road,"
        app:layout_constraintBottom_toBottomOf="@+id/BoxView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <EditText
        android:id="@+id/editTextTextPersonName13"
        android:layout_width="246dp"
        android:layout_height="41dp"
        android:layout_marginStart="198dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Gonawala,Kelaniya"
        app:layout_constraintBottom_toTopOf="@+id/BoxView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/BoxView9"
        app:layout_constraintVertical_bias="0.522" />

    <EditText
        android:id="@+id/editTextDate3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/BoxView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/BoxView8"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Prescription"
        android:textColor="#020202"
        app:iconTint="#0C0B0B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />
</androidx.constraintlayout.widget.ConstraintLayout>